# batty-top

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LESSONS.md  QUICKSTART.md  README.md
batty-mac-extras/: Cargo.toml
batty-mac-extras/src/: lib.rs
batty-top/: Cargo.toml
batty-top/src/: errors.rs  main.rs
batty-top/src/app/: application.rs  config.rs  events.rs  mod.rs
batty-top/src/app/ui/: chart.rs  interface.rs  painter.rs  units.rs  view.rs
probe/: Cargo.toml
probe/src/: main.rs
