[package]
name = "batty"
version = "0.3.0"
edition = "2024"
description = "Interactive battery viewer for the terminal (Apple Silicon fork of battop)"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "batty"
path = "src/main.rs"

[dependencies]
starship-battery = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
itertools = "0.13"
humantime = "2"

[target.'cfg(target_os = "macos")'.dependencies]
batty-mac-extras = { path = "../batty-mac-extras" }
